fix for swiper button overlap
Local and publish has a code difference on the css-
.product-grid-text-section.plans .swiper-button-next, .product-grid-text-section.plans .swiper-button-prev

--- a/ui.frontend/src/main/webpack/etisalat/styles/custom-components/product-grid-text-section.scss
+++ b/ui.frontend/src/main/webpack/etisalat/styles/custom-components/product-grid-text-section.scss
@@ -10,6 +10,12 @@
       }
     }
   }
+  .swiper-button-next,
+  .swiper-button-prev {
+    float: left;
+    margin-bottom: 1rem;
+    margin-top: 1rem;
+  }
 }
 
 .product-grid-text-section {
